gcc/testsuite/gm2/errors/fail/unarygeneric.mod
MODULE unarygeneric ;

FROM SYSTEM IMPORT WORD ;

VAR
   a, b: WORD ;
BEGIN
   b := 1 ;
   a := -b
END unarygeneric.
